canRelayAMessageFromApp - INPRGRSS